Fix form jumping on scroll
IE6 has a problem with a percentage value for padding-left with the form
jumping sometimes. Switching to ems fixes this.

--- a/app/assets/stylesheets/tariff.scss
+++ b/app/assets/stylesheets/tariff.scss
@@ -346,6 +346,7 @@ section#content {
 
   @include ie(6) {
     zoom: 1;
+    padding-left: 36em;
   }
 }
 
